scss/components/_list-table.scss
.list-table {
  &__img {
    width: 58px;
    height: 50px;
    border-radius: 10px;
    overflow: hidden;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      border-radius: 10px;
    }
  }

  &__icon {
    width: 45px;
    height: 45px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    background: rgba($secondary, 0.3);

    i {
      display: inline-flex;
      align-items: center;
      justify-content: center;
      width: 30px;
      height: 30px;
      font-size: 30px;
      color: $dark;
    }
  }

  &__btn {
    width: 132px;
  }

  &__badge-btn {
    padding: 7px 10px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    width: 128px;
  }

  &__btn-badge {
    min-width: 21px;
    height: 21px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    padding: 6px;
    background-color: $primary;
    border-radius: 20px;
    font-size: $fs-15;
    line-height: $lh-100;
    color: $white;
  }

  &__cell {
    padding: 4px 0;
  }

  &__attrs {
    margin-top: 10px;
  }

  .table {
    margin-bottom: 0;


    tr {
      border: 0 !important;
      height: 58px;
      background-color: $white;

      &:nth-of-type(even) {
        background-color: $white;
      }

      &:nth-of-type(odd) {
        background-color: rgba($grey-1, 0.4);
      }

      th {
        font-size: $fs-14;
        line-height: $lh-100;
        font-weight: $fw-600;
        vertical-align: middle;
        border-bottom: 1px solid $border-color;
        padding: 15px;
        background-color: $white;
      }

      td {
        font-size: $fs-15;
        padding: 4px 16px;
        border: 0;
        vertical-align: middle;
      }

      th:nth-child(1),
      td:nth-child(1) {
        padding-left: 20px;
      }
    }

    th {
      font-size: $fs-14;
      line-height: $lh-100;
      font-weight: $fw-600;
      vertical-align: middle;
      border-bottom: 1px solid $border-color;
      padding: 15px 16px;
      background-color: $white;
      white-space: nowrap;
    }

    thead {
      tr {
        height: auto;
        background-color: $white;
      }
    }
  }

  &__light-blue {
    border: 1px solid #dadada;
    border-radius: 10px;

    .table {
      thead {
        th {
          padding: 20px 0 !important;
          vertical-align: top !important;
          font-size: 16px;
          line-height: 1.4;
          background-color: #fbf9ff !important;
          border-radius: 10px 10px 0 0;
        }
      }

      tbody {
        td {
          padding: 20px 0 !important;
          vertical-align: top !important;
          font-size: 16px;
          line-height: 1.4;
          border-top: 1px solid #dadada;
          background-color: #fbf9ff !important;
          border-radius: 0 0 10px 10px;
        }
      }
    }
  }
}

.table>:not(caption)>*>* {
  border-bottom: 0 !important;
}

@media all and (max-width: 768px) {
  .list-table {
    .table {
      tr {

        th,
        td {
          font-size: 14px;
          padding: 5px 10px;
        }
      }
    }
  }

  table {
    thead {
      th {
        font-size: 14px;
      }
    }

    tbody {
      td {
        font-size: 14px;
      }
    }
  }

  .sales {
    &__header {
      display: flex;
      justify-content: space-between;

      p {
        font-size: 16px !important;
      }

      .view-link {
        font-size: 14px;
      }
    }

    &__item {
      font-size: 14px;
    }
  }
}

.table-header-grey {


  th {
    background-color: #F1F1F1 !important;
    font-weight: 500;
    padding: 15px;
    color: #3A494E;
    line-height: 1;

    &:first-child {
      border-radius: 5px 0 0 5px;

    }

    &:last-child {
      border-radius: 0 5px 5px 0;

    }
  }

}

tbody {
  tr {
    td {
      padding: 15px !important;
      font-weight: 500;
      line-height: 1;
      color: #7c7c7c !important;
    }
  }
}

tfoot {
  tr {
    td {
      padding: 25px 15px 15px 15px !important;
      font-weight: 500;
      line-height: 1;
      color: #0C0C0D !important;
    }
  }
}

